feat: İyzico payment gateway entegrasyonu tamamlandı
- İyzico Sandbox API entegrasyonu
- Express.js backend server eklendi
- Payment ve Escrow database entegrasyonu
- UUID compatibility düzeltmeleri
- CSP güvenlik güncellemeleri
- Coolify deployment desteği
- Test modu İyzico API kullanıyor
- Hata yönetimi ve kullanıcı bildirimleri
- README ve dokümantasyon güncellemeleri

Tested: İyzico sandbox ödemeleri başarılı ✅

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           content="default-src 'self'; 
                    script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://esm.sh; 
                    style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; 
-                   connect-src 'self' https://*.supabase.co https://generativelanguage.googleapis.com; 
+                   connect-src 'self' http://localhost:3001 https://*.supabase.co https://generativelanguage.googleapis.com; 
                    img-src 'self' data: https:; 
                    font-src 'self' https:;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
