--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <!-- Security Headers -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
-                   script-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://esm.sh; 
-                   style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; 
-                   connect-src 'self' http://localhost:3001 https://*.supabase.co https://generativelanguage.googleapis.com; 
+                   script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh https://sandbox-static.iyzipay.com https://static.iyzipay.com; 
+                   style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://sandbox-static.iyzipay.com https://static.iyzipay.com; 
+                   connect-src 'self' http://localhost:3001 https://*.supabase.co https://generativelanguage.googleapis.com https://sandbox-api.iyzipay.com https://api.iyzipay.com; 
+                   frame-src 'self' https://sandbox-api.iyzipay.com https://api.iyzipay.com;
                    img-src 'self' data: https:; 
                    font-src 'self' https:;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
