--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-980YZBTVV9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-980YZBTVV9');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +17,9 @@
     <!-- Security Headers -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
-                   script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh https://sandbox-static.iyzipay.com https://static.iyzipay.com https://static.cloudflareinsights.com; 
+                   script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh https://sandbox-static.iyzipay.com https://static.iyzipay.com https://static.cloudflareinsights.com https://www.googletagmanager.com https://www.google-analytics.com; 
                    style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://sandbox-static.iyzipay.com https://static.iyzipay.com; 
-                   connect-src 'self' http://localhost:3001 https://*.supabase.co wss://*.supabase.co https://generativelanguage.googleapis.com https://sandbox-api.iyzipay.com https://api.iyzipay.com https://cloudflareinsights.com; 
+                   connect-src 'self' http://localhost:3001 https://*.supabase.co wss://*.supabase.co https://generativelanguage.googleapis.com https://sandbox-api.iyzipay.com https://api.iyzipay.com https://cloudflareinsights.com https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com; 
                    frame-src 'self' https://sandbox-api.iyzipay.com https://api.iyzipay.com;
                    img-src 'self' data: https:; 
                    font-src 'self' https:;">
