--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://esm.sh https://static.cloudflareinsights.com https://www.googletagmanager.com https://www.google-analytics.com; 
                    style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; 
                    connect-src 'self' http://localhost:3000 http://localhost:3001 https://api.ifoundanapple.com https://*.supabase.co wss://*.supabase.co https://generativelanguage.googleapis.com https://api.paynet.com.tr https://cloudflareinsights.com https://www.googletagmanager.com https://www.google-analytics.com https://analytics.google.com; 
-                   frame-src 'self' https://api.paynet.com.tr;
+                   frame-src 'self' https://*.supabase.co;
                    img-src 'self' data: https:; 
                    font-src 'self' https:;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
